# CommanderChris

./: .chris_bash  .chris_zsh  .gitignore  CMakeLists.txt  README.md  chris_bash.sh  install.sh  setup.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
CommanderChris/: CMakeLists.txt  main.cpp
CommanderChris.xcodeproj/: project.pbxproj
CommanderChris.xcodeproj/xcuserdata/markorenic.xcuserdatad/xcschemes/: xcschememanagement.plist
CommanderChris/src/: gpt.cpp  gpt.hpp  main.cpp  scroller.cpp  scroller.hpp
CommanderChris/src/Modules/Scrapers/: get_software_macos.sh
Scrapers/: get_software_windows.cpp
promptTesting/: main  main.cc
src/: Makefile  context.cpp  context.hpp  env.hpp  gpt.cpp  gpt.hpp  main.cpp  scrap.cpp  scrap.hpp  scroller.cpp  scroller.hpp
src/Modules/Scrapers/: get_hardware_macos.sh
src/scrapers/: get_hardware_macos.sh  get_network_macos.sh  get_processes_macos.sh  get_software_linux.sh  get_software_macos.sh
